# ACID2REAPER

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: README.md
packaging/: BUILD.md  build_linux.sh  build_mac_dmg.sh  build_windows.ps1  launcher_cli.py  launcher_gui.py  pyinstaller.spec
scripts/: verify_changelog.py
src/acid2reaper/: __init__.py  _version.py  acid_routing.py  acid_timeline.py  cli.py  containers.py  exceptions.py  export_rpp.py  media_duration.py  model.py  rpp_format.py  scan.py  security.py  string_scan.py
src/acid2reaper/binary/: __init__.py  extract.py  fingerprint.py  ole_extract.py  riff.py
src/acid2reaper/data/: __init__.py  acd_signatures.json
src/acid2reaper/ui/: __init__.py  desktop.py
tests/: test_binary.py  test_convert.py  test_rpp_format.py  test_security.py  test_string_scan.py
tests/fixtures/: DrumRollUpDemo.acd  DrumRollUpDemo.acd-zip
